--- a/source/index.html
+++ b/source/index.html
@@ -19,13 +19,13 @@
         <div class="header__logo-panel">
           <a class="header__logo">
             <picture>
-              <source media="(min-width: 1440px)" srcset="/img/logo-desktop.svg">
-              <source media="(min-width: 768px)" srcset="/img/logo-tablet.svg">
-              <img src="/img/logo-mobile.svg" width="33" height="37" alt="Cat-Energy">
+              <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img src="img/logo-mobile.svg" width="33" height="37" alt="Cat-Energy">
             </picture>
           </a>
           <a class="header__logo-text footer-logo">
-            <img src="/img/footer-logo.svg" width="101" height="18" alt="Cat-Energy">
+            <img src="img/footer-logo.svg" width="101" height="18" alt="Cat-Energy">
           </a>
           <button class="header__togggle header__togggle--opened"></button>
         </div>
